--- a/01.tex
+++ b/01.tex
@@ -29,6 +29,7 @@
 }
 
 \begin{poster}{
+columns=2,
 grid=false,
 borderColor=bordercol, % Border color of content boxes
 headerColorOne=headercol1, % Background color for the header in the content boxes (left side)
@@ -71,26 +72,36 @@ boxshade=plain
 %----------------------------------------------------------------------------------------
 
 \headerbox{系統架構\space System Architecture}{name=architecture,column=0,below=introduction}{
-\includegraphics[scale=0.55]{軟硬體架構圖.JPG}
+遊戲系統分為Android行動裝置端及Ardroid端: Android中主要含網路連線及影像處理之功能，利用網路連線與伺服器端開啟網路通道，影像處理則透過演算法計算改變原始影像；Arduino連接肌肉感測器，來獲取肌肉數據並以傅立葉轉換分析。Android與Arduino則是透過藍芽模組串連之，完成整個遊戲系統。
+\center
+\includegraphics[scale=0.6]{軟硬體架構圖.JPG}
+
 }
 
 %----------------------------------------------------------------------------------------
 %	技術說明 Technical Description
 %----------------------------------------------------------------------------------------
 
-\headerbox{系技術說明\space Technical Description}{name=technical,column=0,below=architecture}{
-
+\headerbox{技術說明\space Technical Description}{name=technical,column=0,below=architecture}{
+\begin{itemize}
+\item 網路連線
 \begin{description}
-\item[A] 網路連線協定圖
+\item[1] 基於TCP網路架構，建構出伺服器(Server)端及玩家(Client)端。
+\item[2] 透過socket連線後，使用inputstream、outputstream於網路通道上進行輸入及輸出，並以lock、unlock、await、signal處理同步問題。
+\item[3] 連線協定圖
+
+\end{description}
+
 \includegraphics[scale=0.3]{tcp01.JPG}
 \includegraphics[scale=0.3]{tcp02.JPG}
 \includegraphics[scale=0.3]{tcp03.JPG}
 
-\item[B] 臉部偵測
+\item 臉部偵測
 \\ blablabla
-\item[C] 肌肉感測器數據分析
+\item 肌肉感測器數據分析
 \\ blablabla
-\end{description}
+
+\end{itemize}
 }
 
 %----------------------------------------------------------------------------------------
