--- a/01.tex
+++ b/01.tex
@@ -72,7 +72,7 @@ boxshade=plain
 %----------------------------------------------------------------------------------------
 
 \headerbox{系統架構\space System Architecture}{name=architecture,column=0,below=introduction}{
-遊戲系統分為Android行動裝置端及Ardroid端: Android中主要含網路連線及影像處理之功能，利用網路連線與伺服器端開啟網路通道，影像處理則透過演算法計算改變原始影像；Arduino連接肌肉感測器，來獲取肌肉數據並以傅立葉轉換分析。Android與Arduino則是透過藍芽模組串連之，完成整個遊戲系統。
+遊戲系統分為 Ardroid端及肌肉感測器端: Android 中主要含網路連線及影像處理兩部分。利用網路連線與伺服器端開啟網路通道，影像處理則透過特徵點的取得在指定的位置上進行圖像修改；肌肉感測器運用Arduino來獲取肌肉數據並以傅立葉轉換分析。Android 與 肌肉感測器 則是透過藍芽模組串連，完成整個遊戲系統。
 \center
 \includegraphics[scale=0.6]{軟硬體架構圖.JPG}
 
