--- a/01.tex
+++ b/01.tex
@@ -72,7 +72,7 @@ boxshade=plain
 %----------------------------------------------------------------------------------------
 
 \headerbox{系統架構\space System Architecture}{name=architecture,column=0,below=introduction}{
-遊戲系統分為 Ardroid端及肌肉感測器端: Android 中主要含網路連線及影像處理兩部分。利用網路連線與伺服器端開啟網路通道，影像處理則透過特徵點的取得在指定的位置上進行圖像修改；肌肉感測器運用Arduino來獲取肌肉數據並以傅立葉轉換分析。Android 與 肌肉感測器 則是透過藍芽模組串連，完成整個遊戲系統。
+遊戲系統分為Android端及肌肉感測器端: Android中主要含網路連線及影像處理兩部分。利用網路連線與伺服器端開啟網路通道，影像處理則透過特徵點的取得在指定的位置上進行圖像修改；肌肉感測器運用Arduino來獲取肌肉數據並以傅立葉轉換分析。Android與肌肉感測器 則是透過藍芽模組串連，完成整個遊戲系統。
 \center
 \includegraphics[scale=0.6]{軟硬體架構圖.JPG}
 
@@ -88,13 +88,9 @@ boxshade=plain
 \begin{description}
 \item[1] 基於TCP網路架構，建構出伺服器(Server)端及玩家(Client)端。
 \item[2] 透過socket連線後，使用inputstream、outputstream於網路通道上進行輸入及輸出，並以lock、unlock、await、signal處理同步問題。
-\item[3] 連線協定圖
-
+\item[3] 連線協定圖 \\
+\includegraphics[scale=0.5]{TCP.JPG}
 \end{description}
-
-\includegraphics[scale=0.3]{tcp01.JPG}
-\includegraphics[scale=0.3]{tcp02.JPG}
-\includegraphics[scale=0.3]{tcp03.JPG}
 
 \item 臉部偵測
 \\ blablabla
@@ -147,21 +143,6 @@ boxshade=plain
 \item 第一點
 \item 第二點
 \end{enumerate}
-}
-
-%----------------------------------------------------------------------------------------
-%	REFERENCES
-%----------------------------------------------------------------------------------------
-
-\headerbox{References}
-{name=references,column=1,below=discussion}{
-
-\smaller % Reduce the font size in this block
-\renewcommand{\section}[2]{\vskip 0.05em} % Get rid of the default "References" section title
-\nocite{*} % Insert publications even if they are not cited in the poster
-
-\bibliographystyle{unsrt}
-\bibliography{sample} % Use sample.bib as the bibliography file
 }
 
 %----------------------------------------------------------------------------------------
