--- a/01.tex
+++ b/01.tex
@@ -112,13 +112,13 @@ boxshade=plain
 
 \begin{itemize}
 \item 遊戲主頁面及開始畫面(連線上Server) \\ \\
-\includegraphics[scale=0.25]{game01.png} 
+\includegraphics[scale=0.15]{game01.png} 
 \space \space
-\includegraphics[scale=0.25]{game02.png}
+\includegraphics[scale=0.15]{game02.png}
 \item 遊戲中畫面 \\ \\
-\includegraphics[scale=0.25]{game03.png}
-\item 遊戲結束畫面
-\\ blablabla
+\includegraphics[scale=0.15]{game03.png}
+\item 遊戲結束畫面 \\ \\
+\includegraphics[scale=0.15]{game04.png}
 \end{itemize}
 }
 
