--- a/01.tex
+++ b/01.tex
@@ -88,7 +88,8 @@ boxshade=plain
 \headerbox{系統架構\space System Architecture}{name=architecture,column=0,below=introduction}{
 遊戲系統分為Android端及肌肉感測器端: Android中主要含網路連線及影像處理兩部分。利用網路連線與伺服器端開啟網路通道，影像處理則透過特徵點的取得在指定的位置上進行圖像修改；肌肉感測器運用Arduino來獲取肌肉數據並以傅立葉轉換分析。Android與肌肉感測器 則是透過藍芽模組串連，完成整個遊戲系統。
 \center
-\includegraphics[scale=0.6]{軟硬體架構圖.JPG}
+\includegraphics[scale=0.6]{軟硬體架構圖.JPG} \\
+\includegraphics[scale=0.08]{system.jpg}
 
 }
 
@@ -102,8 +103,8 @@ boxshade=plain
 \begin{description}
 \item[1] 基於TCP網路架構，建構出伺服器(Server)端及玩家(Client)端。
 \item[2] 透過socket連線後，使用不同Thread分別執行inputstream與outputstream，於網路通道上進行輸入及輸出，且以lock、unlock、await、signal處理同步問題。
-\item[3] Client端連線架構圖 \\
-\includegraphics[scale=0.45]{Client.JPG}
+\item[3] 網路協定圖 \\
+\includegraphics[scale=0.7]{TCP-0.JPG}
 \end{description}
 
 \end{itemize}
@@ -141,13 +142,13 @@ boxshade=plain
 
 \begin{itemize}
 \item 遊戲主頁面及開始、結束畫面 \\ \\
-\includegraphics[scale=0.15]{game01.png} 
+\includegraphics[scale=0.17]{game01.png} 
 \space \space
-\includegraphics[scale=0.15]{game02.png}
+\includegraphics[scale=0.17]{game02.png}
 \space \space
-\includegraphics[scale=0.15]{game04.png}
+\includegraphics[scale=0.17]{game04.png}
 \item 遊戲中畫面 \\ \\
-\includegraphics[scale=0.2]{game03.png}
+\includegraphics[scale=0.23]{game03.png}
 %\item 遊戲結束畫面 \\ \\
 %\includegraphics[scale=0.15]{game04.png}
 \end{itemize}
