--- a/01.tex
+++ b/01.tex
@@ -148,6 +148,10 @@ boxshade=plain
 \space \space
 \includegraphics[scale=0.17]{game04.png}
 \item 遊戲中畫面 \\ \\
+\includegraphics[scale=0.17]{game05.png}
+\space \space
+\includegraphics[scale=0.17]{game06.png}
+\space \space
 \includegraphics[scale=0.23]{game03.png}
 %\item 遊戲結束畫面 \\ \\
 %\includegraphics[scale=0.15]{game04.png}
